[BUGFIX] table column width and sparkline bar width fixed in "em"
addressing issue #39 Sum column get too wide if names are short

--- a/app/styles/_table.less
+++ b/app/styles/_table.less
@@ -18,17 +18,17 @@
 
 .table > thead > tr > th._3
 {
-  min-width: 50px;
+  width: 4.5em;
 }
 
 .table > thead > tr > th._2
 {
-  min-width: 7.5em;
+  width: 9.5em;
 }
 
 .table > thead > tr > th._4
 {
-  min-width: 7em;
+  width: 7em;
 }
 
 .table > tbody > tr > td
@@ -75,7 +75,8 @@
 .inlinesparkline
 {
   height: 15px;
-  width: 100%;
+  margin: 0 0 0 auto;
+//  display: inline-block;
 }
 
 .inlinesparkline .sparklinecontainer
